@@ -11,7 +11,7 @@
 #	files by clicking on the file icons or by entering a filename
 #	in the "Filename:" entry.
 #
-# RCS: @(#) $Id: tkfbox.tcl,v 1.57 2006/04/10 21:33:45 dkf Exp $
+# RCS: @(#) $Id: tkfbox.tcl,v 1.58 2006/07/07 00:39:42 hobbs Exp $
 #
 # Copyright (c) 1994-1998 Sun Microsystems, Inc.
 #
@@ -220,8 +220,8 @@ proc ::tk::IconList_Create {w} {
     upvar ::tk::$w data
 
     frame $w
-    set data(sbar)   [scrollbar $w.sbar -orient horizontal \
-	    -highlightthickness 0 -takefocus 0]
+    set data(sbar)   [scrollbar $w.sbar -orient horizontal -takefocus 0]
+    catch {$data(sbar) configure -highlightthickness 0}
     set data(canvas) [canvas $w.canvas -bd 2 -relief sunken \
 	    -width 400 -height 120 -takefocus 1]
     pack $data(sbar) -side bottom -fill x -padx 2
